k8/auth-deploy+svc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restaurant-auth
  template:
    metadata:
      labels:
        app: restaurant-auth
    spec:
      containers:
      - name: restaurant-auth
        image: ugougo05/auth:latest
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: restaurant-auth
  ports:
    - port: 3001
      targetPort: 3001
