k8/frontend-deploy+svc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restaurant-client
  template:
    metadata:
      labels:
        app: restaurant-client
    spec:
      containers:
      - name: restaurant-client
        image: ugougo05/client:latest
        ports:
          - containerPort: 3000
        
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: restaurant-client
  ports:
    - port: 3000
      targetPort: 3000
