k8/items-deploy+svc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: items-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restaurant-items
  template:
    metadata:
      labels:
        app: restaurant-items
    spec:
      containers:
      - name: restaurant-items
        image: ugougo05/items:latest
        ports:
        - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: items-service
spec:
  selector:
    app: restaurant-items
  ports:
    - port: 3003
      targetPort: 3003
