k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restauranty-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3001
          - path: /discounts
            pathType: Prefix
            backend:
              service:
                name: discounts-service
                port:
                  number: 3002
          - path: /items
            pathType: Prefix
            backend:
              service:
                name: items-service
                port:
                  number: 3003
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 3000
